Se añade elementos del capítulo Escribiendo HTML desde JavaScript - Platzi

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Basic DOM manipulation - Practical JS course</title>
 </head>
 <body>
-    <h1>Basic DOM manipulation</h1>
+    <h1 class="title">Basic DOM manipulation</h1>
 
     <p>This is a paragraph</p>
     <p class="pClass">This is a paragraph with class</p>
