Se aplican enseñanzas de la clase de Eventos en JavaScript

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Basic DOM manipulation - Practical JS course</title>
 </head>
 <body>
-    <h1 class="title">Basic DOM manipulation</h1>
+    <h1 class="title">Manipulación básica del DOM</h1>
 
-    <p>This is a paragraph</p>
-    <p class="pClass">This is a paragraph with class</p>
     <p id="pId">This is a paragraph with ID</p>
 
-    <input placeholder="Type something here">
+    <input id="input-ejemplo1" placeholder="Type something here">
+    <input id="input-ejemplo2" placeholder="Type something here">
+
+    <button id="btn-calcular" onclick="btnCalcular()">Calcular</button>
+
+    <p id="resultado"></p>
 
     <script src="./script.js"></script>
 </body>
